--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
       <li><a href="calculator.html">Calculator</a></li>
       <li><a href="pathways.html">Neutrality Pathways</a></li>
       <li><a href="info.html">Information</a></li>
-      <li><a href="#"class="active">About Us</a></li>
-    </ul>
+            <li><a href="#"class="active">About Us</a></li>
+<li id="auth-section"></li>    </ul>
   </nav>
 </header>
   <!-- Hero Section -->
@@ -32,7 +32,7 @@
     <h1>About ZeroSphere</h1>
     <p class="tagline">Innovation for a cleaner, data-driven future.</p>
     <p class="intro">
-      ZeroSphere is an initiative focused on measuring, analyzing, and reducing
+      ZeroSphere is an initiative focused on measuring, analysing, and reducing
       carbon emissions from coal mines using technology and transparency.
     </p>
   </section>
@@ -55,11 +55,11 @@
     <div class="team-container">
       <div class="team-card">
         <h3>Surat Bhushan</h3>
-        <p>Software Development & Research</p>
+        <p>Software Development</p>
       </div>
       <div class="team-card">
         <h3>Satnoor Saran</h3>
-        <p>Research & Hardware Integration</p>
+        <p>Hardware Integration</p>
       </div>
       <div class="team-card">
         <h3>Mahi Singh</h3>
@@ -73,7 +73,7 @@
     <h2>Contact Us</h2>
     <p>
       For further details, queries, or to learn more about the backend logic
-      and emission calculation models, reach out to us. Click at the icon below to send us a mail at: bhushansurat4@gmail.com
+      and emission calculation models, reach out to us. Click on the icon below to send us an email at: bhushansurat4@gmail.com
     </p>
     <a href="mailto:bhushansurat4@gmail.com" class="mail-icon">
 <img src="https://icons.iconarchive.com/icons/wineass/ios7-redesign/128/Mail-icon.png" width="128" height="128">
@@ -85,35 +85,64 @@
   <footer>
     <p>© 2025 ZeroSphere. All rights reserved. | Designed by Surat Bhushan</p>
   </footer>
-  <script>
-  const hamburger = document.getElementById('hamburger');
-  const navLinks = document.getElementById('nav-links');
-
-  hamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-    document.body.classList.toggle('menu-open');
-  });
-
-  // Optional: close menu when clicking a link
-  document.querySelectorAll('.nav-links a').forEach(link => {
-    link.addEventListener('click', () => {
-      navLinks.classList.remove('active');
-      document.body.classList.remove('menu-open');
-    });
-  });
   
-  document.addEventListener('click', (e) => {
-    const nav = document.getElementById('nav-links');
-    const burger = document.getElementById('hamburger');
-    const clickedInsideMenu = nav.contains(e.target) || burger.contains(e.target);
+<script type="module" src="js/firebase-init.js"></script>
+<script type="module">
+  import { auth } from "./js/firebase-init.js";
+  import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-    if (!clickedInsideMenu && nav.classList.contains('active')) {
-      nav.classList.remove('active');
-      document.body.classList.remove('menu-open');
+  document.addEventListener("DOMContentLoaded", () => {
+    const hamburger = document.getElementById("hamburger");
+    const navLinks = document.getElementById("nav-links");
+    const authSection = document.getElementById("auth-section");
+
+    //Toggle menu
+    if (hamburger && navLinks) {
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        document.body.classList.toggle("menu-open");
+      });
+
+      // Close menu on link click
+      navLinks.querySelectorAll("a").forEach((link) =>
+        link.addEventListener("click", () => {
+          navLinks.classList.remove("active");
+          document.body.classList.remove("menu-open");
+        })
+      );
+
+      // Close menu when clicking outside
+      document.addEventListener("click", (e) => {
+        if (!navLinks.contains(e.target) && !hamburger.contains(e.target)) {
+          navLinks.classList.remove("active");
+          document.body.classList.remove("menu-open");
+        }
+      });
+    }
+
+    //  auth display
+    if (authSection) {
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          authSection.innerHTML = `
+            <a href="profile.html">My Profile</a>
+            <button id="logoutBtn" class="logout-btn">Logout</button>
+          `;
+
+          document.getElementById("logoutBtn").addEventListener("click", async () => {
+            await signOut(auth);
+            alert("Logged out!");
+            window.location.href = "index.html";
+          });
+        } else {
+          authSection.innerHTML = `<a href="login.html">Login / Sign Up</a>`;
+        }
+      });
     }
   });
-
-
 </script>
+
+
+
 </body>
 </html>
