--- a/calculator.html
+++ b/calculator.html
@@ -24,7 +24,8 @@
       <li><a href="calculator.html" class="active">Calculator</a></li>
       <li><a href="pathways.html">Neutrality Pathways</a></li>
       <li><a href="info.html">Information</a></li>
-      <li><a href="about.html">About Us</a></li>
+            <li><a href="about.html">About Us</a></li>
+<li id="auth-section"></li>
     </ul>
   </nav>
 </header>
@@ -53,7 +54,7 @@
         <div class="form-field"><label for="petrol">Petrol used (L)</label><input type="number" id="petrol" min="0" placeholder="e.g., 300" /></div>
         <div class="form-field"><label for="coal">Coal used (kg)</label><input type="number" id="coal" min="0" placeholder="e.g., 2000" /></div>
         <div class="form-field"><label for="lpg">LPG used (kg)</label><input type="number" id="lpg" min="0" placeholder="e.g., 150" /></div>
-        <div class="form-field"><label for="ch4">Methane (CH₄) released (m³)</label><input type="number" id="ch4" min="0" placeholder="e.g., 20" /></div>
+        <div class="form-field"><label for="ch4">Methane (CH₄) emitted (kg)</label><input type="number" id="ch4" min="0" placeholder="e.g., 2.1" /></div>
         <div class="form-field"><label for="n2o">Nitrous Oxide (N₂O) emitted (kg)</label><input type="number" id="n2o" min="0" placeholder="e.g., 10" /></div>
       </div>
       <button type="button" id="calcEmissionBtn" class="btn calc-btn">Calculate Emissions</button>
@@ -127,36 +128,67 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="js/calculator.js"></script>
-  <script>
-  const hamburger = document.getElementById('hamburger');
-  const navLinks = document.getElementById('nav-links');
 
-  hamburger.addEventListener('click', () => {
-    navLinks.classList.toggle('active');
-    document.body.classList.toggle('menu-open');
-  });
-
-  // Optional: close menu when clicking a link
-  document.querySelectorAll('.nav-links a').forEach(link => {
-    link.addEventListener('click', () => {
-      navLinks.classList.remove('active');
-      document.body.classList.remove('menu-open');
-    });
-  });
   
-  document.addEventListener('click', (e) => {
-    const nav = document.getElementById('nav-links');
-    const burger = document.getElementById('hamburger');
-    const clickedInsideMenu = nav.contains(e.target) || burger.contains(e.target);
 
-    if (!clickedInsideMenu && nav.classList.contains('active')) {
-      nav.classList.remove('active');
-      document.body.classList.remove('menu-open');
+<script type="module" src="js/firebase-init.js"></script>
+<script type="module" src="js/calculator.js"></script>
+<script type="module">
+  import { auth } from "./js/firebase-init.js";
+  import { onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+
+  document.addEventListener("DOMContentLoaded", () => {
+    const hamburger = document.getElementById("hamburger");
+    const navLinks = document.getElementById("nav-links");
+    const authSection = document.getElementById("auth-section");
+
+    // Toggle menu 
+    if (hamburger && navLinks) {
+      hamburger.addEventListener("click", () => {
+        navLinks.classList.toggle("active");
+        document.body.classList.toggle("menu-open");
+      });
+
+      // Close menu on link click
+      navLinks.querySelectorAll("a").forEach((link) =>
+        link.addEventListener("click", () => {
+          navLinks.classList.remove("active");
+          document.body.classList.remove("menu-open");
+        })
+      );
+
+      // Close menu when clicking outside
+      document.addEventListener("click", (e) => {
+        if (!navLinks.contains(e.target) && !hamburger.contains(e.target)) {
+          navLinks.classList.remove("active");
+          document.body.classList.remove("menu-open");
+        }
+      });
+    }
+
+    //auth display
+    if (authSection) {
+      onAuthStateChanged(auth, (user) => {
+        if (user) {
+          authSection.innerHTML = `
+            <a href="profile.html">My Profile</a>
+            <button id="logoutBtn" class="logout-btn">Logout</button>
+          `;
+
+          document.getElementById("logoutBtn").addEventListener("click", async () => {
+            await signOut(auth);
+            alert("Logged out!");
+            window.location.href = "index.html";
+          });
+        } else {
+          authSection.innerHTML = `<a href="login.html">Login / Sign Up</a>`;
+        }
+      });
     }
   });
-
-
 </script>
+
+
+
 </body>
 </html>
