--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 ZeroSphere. All rights reserved. | Designed by Surat Bhushan</p>
+    <p>© 2025 ZeroSphere. All rights reserved. | Developed by Surat Bhushan</p>
   </footer>
 
   
