--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 ZeroSphere. All rights reserved. | Designed by Surat Bhushan</p>
+    <p>© 2025 ZeroSphere. All rights reserved. | Developed by Surat Bhushan</p>
   </footer>
   
 <script type="module" src="js/firebase-init.js"></script>
