--- a/info.html
+++ b/info.html
@@ -146,7 +146,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 ZeroSphere. All rights reserved. | Designed by Surat Bhushan</p>
+    <p>© 2025 ZeroSphere. All rights reserved. | Developed by Surat Bhushan</p>
   </footer>
 
   <script>
