--- a/pathways.html
+++ b/pathways.html
@@ -142,7 +142,7 @@
   </section>
 
   <footer>
-    <p>© 2025 ZeroSphere. All rights reserved. | Designed by Surat Bhushan</p>
+    <p>© 2025 ZeroSphere. All rights reserved. | Developed by Surat Bhushan</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
