--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
         <p><strong>State:</strong> <span id="profile-state">--</span></p>
         <p><strong>Email:</strong> <span id="profile-email">--</span></p>
       </div>
-      <button id="logout-btn" class="btn action-btn">Logout</button>
+      <button id="logoutBtn" class="logout-btn">Logout</button>
     </div>
   </section>
 
