--- a/pathways.html
+++ b/pathways.html
@@ -60,7 +60,7 @@
           <input type="number" id="land" placeholder="e.g. 20" min="0" />
         </div>
         <div class="form-field">
-          <label for="currentEmission">Current Net Emission (t CO₂e)</label>
+          <label for="currentEmission">Current Net Annual Emission (t CO₂e)</label>
           <input type="number" id="currentEmission" placeholder="e.g. 5000" min="0" />
         </div>
       </div>
