--- a/calculator.html
+++ b/calculator.html
@@ -65,7 +65,7 @@
   <!-- Sink -->
   <section class="calculator-section alt-bg">
     <h2>2. Sink Calculation</h2>
-    <p class="section-intro">Estimate carbon sequestration through natural/artificial sinks.</p>
+    <p class="section-intro">Estimate annual carbon sequestration through natural/artificial sinks.</p>
 
     <form id="sinkForm" class="calc-form">
       <div class="input-grid">
